index.html => Edited 'welcome' text size to 60px

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <title>hallo</title>
 </head>
 <body> 
-    <h1 class="center-box">Welcome</h1>
+    <h1 class="center-box" style="font-size: 60px">Welcome</h1>
 </body>
 </html>
