--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="files/css/styles.css">
     <title>hallo</title>
 </head>
 <body> 
-    <h1 class="center-box" style="font-size: 60px">Welcome</h1>
+    <div class="center-box" style="font-size: 40px;">
+        <h1>Welcome</h1>
+    </div>
+    
 </body>
 </html>
