Edited index.html & styles.css

--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <h1>Welcome</h1>
     </div>
     
-    <div></div>
+    <div class="top-left" style="font-size: 20px;">
+        <p class="ul-title-style">skills</p>
+        <ul class="ul-list-style">
+            <li>test</li>
+        </ul>
+    </div>
 </body>
 </html>
