Edited styles.css & index.html

--- a/index.html
+++ b/index.html
@@ -20,10 +20,21 @@
         <h1>Welcome</h1>
     </div>
     
-    <div class="top-left" style="font-size: 20px;">
+    <div class="top-left">
         <p class="ul-title-style">skills</p>
         <ul class="ul-list-style">
-            <li>test</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>Python</li>
+        </ul>
+    </div>
+
+    <div class="top-right">
+        <p class="ul-title-style">socials</p>
+        <ul class="ul-list-style">
+            <p class="ul-socials-github ul-delete-space-bottom">GitHub</p>
+            <a href="https://github.com/itsjxnah">@itsjxnah</a> <br>
+            <a href="https://github.com/Kobold13371">@Kobold13371</a>
         </ul>
     </div>
 </body>
